# python-srcinfo

./: .travis.yml  LICENSE  README.rst  pyproject.toml  setup.py
.github/workflows/: check.yml
libsrcinfo/: __init__.py  main.py  parse.py
srcinfo/: __init__.py  main.py  parse.py  utils.py
test/: __init__.py
